Update course numbers.

--- a/Assignments/ImprovingPerformance.ipynb
+++ b/Assignments/ImprovingPerformance.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<center><img src='img/ms_logo.jpeg' height=60% width=60%></center>\n",
     "\n",
@@ -19,12 +18,12 @@
     "\n",
     "<center><h3>2. Hyperparameter Tuning</h3></center>\n",
     "\n",
-    "**_Hyperparameter Tuning_** is the hardest of the three topics we'll cover in this notebook.  Just as we used GridSearchCV to find the best combination of parameters for our models in DS2, we'll explore strategies for Hyperparameter Tuning to find the best combination for our Neural Networks in this notebook.  You'll likely find hyperparameter tuning for DS3 much harder and more time consuming than it was in DS2--neural networks have many more hyperparameters, and take longer to train, which means that combinatoric approaches like GridSearch are usually untenable. In this notebook, we'll explore the hyperparameters we should tune, and strategies for how to do so. \n",
+    "**_Hyperparameter Tuning_** is the hardest of the three topics we'll cover in this notebook.  Just as we used GridSearchCV to find the best combination of parameters for our models in ACS 3510, we'll explore strategies for Hyperparameter Tuning to find the best combination for our Neural Networks in this notebook.  You'll likely find hyperparameter tuning in this course much harder and more time consuming than it was before --neural networks have many more hyperparameters, and take longer to train, which means that combinatoric approaches like GridSearch are usually untenable. In this notebook, we'll explore the hyperparameters we should tune, and strategies for how to do so. \n",
     "\n",
     "\n",
     "<center><h2>Getting Started: Underfitting and Overfitting</h2></center>\n",
     "\n",
-    "In DS2, we learned about how to evaluate the **_fit_** of our models.  Recall that in any supervised learning scenario, we split our data into training and testing sets.  Our training set is used to help our model learn insights from the data that it will use to make inferences to predict a class (classification tasks) or continue value (regression tasks).  Ideally, the model has learned just enough information from the training data to be generalizable to the real world.  If the model did learn enough about the training data to accurately make predictions, we say that the model has **_underfit_** the data.  If the model has mistaken variance in the training data for information it can use to make predictions, it will not generalize well to the real world.  Underfitting as if your model is blind to the answers in front it--overfitting is as if it is hallucinating.  \n",
+    "In ACS 3510, we learned about how to evaluate the **_fit_** of our models.  Recall that in any supervised learning scenario, we split our data into training and testing sets.  Our training set is used to help our model learn insights from the data that it will use to make inferences to predict a class (classification tasks) or continue value (regression tasks).  Ideally, the model has learned just enough information from the training data to be generalizable to the real world.  If the model did learn enough about the training data to accurately make predictions, we say that the model has **_underfit_** the data.  If the model has mistaken variance in the training data for information it can use to make predictions, it will not generalize well to the real world.  Underfitting as if your model is blind to the answers in front it--overfitting is as if it is hallucinating.  \n",
     "<br>\n",
     "<center>Let's examine an analogy to help us better understand overfitting and underfitting: studying for exams with a practice test book!</center>\n",
     "<br>\n",
@@ -79,13 +78,12 @@
     "Enough analogies--let's build a small neural network and try to evaluate model fitness using Tensorboard!\n",
     "\n",
     "**_Run the cell below to set up import everything that's needed to build a small neural network and preprocess the MNIST data set._**"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import keras\n",
     "import numpy as np\n",
@@ -102,11 +100,12 @@
     "\n",
     "y_train = keras.utils.to_categorical(y_train, 10)\n",
     "y_test = keras.utils.to_categorical(y_test, 10)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Next, we'll create a [Tensorboard callback]() by following the Keras documentation steps.  \n",
     "\n",
@@ -163,24 +162,24 @@
     "    <td class=\"tg-j32n\">Softmax</td>\n",
     "  </tr>\n",
     "</table>"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# This should take 3 lines of code.  Remember, you can declare the input layer when declaring the first hidden layer \n",
     "# by passing the 'input_shape=' parameter, with the parameter set to the number of neurons in your input layer.  \n",
     "underfit_model = Sequential()\n",
     "underfit_model.add(Dense(5, activation='sigmoid', input_shape=(784,)))\n",
     "underfit_model.add(Dense(10, activation='softmax'))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Next, we'll compile the model with the following parameters:\n",
     "\n",
@@ -191,20 +190,20 @@
     "`metrics` = `['accuracy']`\n",
     "\n",
     "**_Challenge:_** Call `model.compile()` and pass in the parameters above with their corresponding values."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "underfit_model.compile(loss='categorical_crossentropy', optimizer='SGD', metrics=['accuracy'])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Finally, we'll fit the model.  We're going to purposefully pass in parameters that will cause it further underfit (the shape of our neural network is too small, and will already cause it to underfit the data significantly).\n",
     "\n",
@@ -225,24 +224,24 @@
     "`validation_data` = `(X_test, y_test)`\n",
     "\n",
     "`callbacks` = `[tb_callback]`"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "tb_callback = TensorBoard(log_dir='./underfit_logs', histogram_freq=0, batch_size=512, write_graph=True, \n",
     "                          write_grads=False, write_images=False, embeddings_freq=0, \n",
     "                          embeddings_layer_names=None, embeddings_metadata=None)\n",
     "\n",
     "underfit_model.fit(X_train, y_train, batch_size=512, verbose=1, epochs=2, validation_data=(X_test, y_test), callbacks=[tb_callback])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<center><h2>Examining Our Model in Tensorboard</h2></center>\n",
     "\n",
@@ -281,20 +280,20 @@
     "**_IMPORTANT NOTE:_**  BE SCIENTIFIC IN YOUR APPROACH! Don't just change everything at once--then, you don't know what affect each change had.  Make **_one change at a time_**, and track the results of each change (think **_dependent_** and **_independent_** variables--its called data **_SCIENCE_** for a reason!)\n",
     "\n",
     "### Be sure to restart the kernel with every new iteration--otherwise, the changes will just piggyback off the weights of the old model!"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Recreate the model from above, but with higher complexity.  Choose better hyperparameters to tune it!\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<center><h2>Regularization with Dropout</h2></center>\n",
     "\n",
@@ -327,16 +326,17 @@
     "<center><img src='img/dropout.png' height=60% width=60%></center>\n",
     "\n",
     "**_Challenge:_** Modify the network you wrote above to include dropout layers between every dense layer.  How does this affect your training accuracy? How does this affect your test accuracy?"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Write a network that includes dropout layers below!\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
