--- a/Assignments/MultilayerPerceptrons.ipynb
+++ b/Assignments/MultilayerPerceptrons.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<center><img src='img/ms_logo.jpeg' height=60% width = 60%></center>\n",
     "\n",
@@ -76,20 +75,19 @@
     "(A quick note--you may be wondering where the initial values for the weights and biases for each neuron come from, before the first forward prop step on the first data point.  The simple answer is that they are just random values.  this is okay, because the network will \"learn\" the correct weights during the backprop step described below!)\n",
     "\n",
     "Phew--that was a lot to cover! Enough talk--let's use **_Keras_** to build our very own MLP for classifying pictures of articles of clothing from the **_Zalando Fashion MNIST dataset_**!"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**Run the following block of code to import everything we'll need for our MLP.**"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import keras\n",
     "from keras.models import Sequential\n",
@@ -98,11 +96,12 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "%matplotlib inline"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Keras module explanations\n",
     "\n",
@@ -125,30 +124,30 @@
     "Finally, we import two familiar libaries: `matplotlib` so we can visualize what some of our data looks like, and `numpy` for use in during our data preprocessing steps. \n",
     "\n",
     "**Run the cells below to impor the data and visualize an example from our data set. **"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "(X_train, y_train), (X_test, y_test) = fashion_mnist.load_data()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "plt.imshow(X_train[0])\n",
     "print(\"label for image: {}\".format(y_train[0]))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<center>Looking at the table below, we can see that this image is classified as an \"ankle boot\".  </center>\n",
     "\n",
@@ -169,21 +168,21 @@
     "<center>Next, we'll run through some common steps for preprocessing our data.</center>\n",
     "\n",
     "**Run the cell below to see the shape of X_train and X_test.**"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "print(\"Shape of X_train: {}\".format(X_train.shape))\n",
     "print(\"Shape of X_test: {}\".format(X_test.shape))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<center><h3>Data Preprocessing</h3></center>\n",
     "\n",
@@ -200,27 +199,27 @@
     "```\n",
     "\n",
     "<em>**You'll also need to reshape X\\_test--remember that X\\_test only contains 10000 rows, not 60000!**</em>"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "X_train = None\n",
     "X_test = None"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Great! This brings us to Step 2:\n",
     "\n",
     "**_ 2. Normalize the data._**  \n",
     "\n",
-    "By normalizing our input data, this will allow the neural network to converge on the correct answers much more quickly.  In DS2, you learned that normalizing a value means subtracting the mean of the feature and then dividing by the standard deviation--however, since we're working with image data, there's a quick shortcut we can use.  Since each data point is a pixel value, this means that each data point can only have a value between 0 and 255. \n",
+    "By normalizing our input data, this will allow the neural network to converge on the correct answers much more quickly.  In ACS 3510, you learned that normalizing a value means subtracting the mean of the feature and then dividing by the standard deviation--however, since we're working with image data, there's a quick shortcut we can use.  Since each data point is a pixel value, this means that each data point can only have a value between 0 and 255. \n",
     "\n",
     "To normalize our image data, we'll just divide every point by 255! Example follows:\n",
     "\n",
@@ -229,21 +228,21 @@
     "```\n",
     "\n",
     "<em>**Divide X_train and X_test by 255.**</em>"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "X_train /= None\n",
     "X_test /= None"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Now for our final preprocessing step:\n",
     "\n",
@@ -264,21 +263,21 @@
     "```\n",
     "\n",
     "<em>**Use the function shown above to convert the labels contained in y_train and y_test to one-hot vectors.**</em>"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "y_train = None\n",
     "y_test = None"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<center><h2>Building our MultiLayer Perceptron</h2></center>\n",
     "\n",
@@ -295,39 +294,39 @@
     "\n",
     "\n",
     "To create a neural network in Keras, we'll start by instantiating a `Sequential()` object, and then add each successive layer using the  object's `.add()` method. The code in the following cell creates a very basic MLP.  This network won't perform too well on the data, but don't worry about that just yet--we're only going to use it as a reference for how to write code with Keras. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "poor_model = Sequential()\n",
     "poor_model.add(Dense(25, activation='sigmoid', input_shape=(784,)))\n",
     "poor_model.add(Dense(10, activation='softmax'))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Once we've created the model, we still have to have keras compile it.  Run the following code to compile and inspect the network. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "poor_model.compile(loss='categorical_crossentropy', optimizer='SGD', metrics=['accuracy'])\n",
     "poor_model.summary()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Calling `.summary()` on a compiled model will give us a print out of each layer in the network, and tell us how many trainable parameters are contained in each layer, as well as in the model as a whole.  **_Trainable Parameters_** are any values that the model will learn through training--all the weights and biases that will start off as random values, each slowly moving towards its own optimal value with each mistake in training.  \n",
     "\n",
@@ -336,20 +335,20 @@
     "**_Fitting the Model_**\n",
     "\n",
     "Like any machine learning algorithm, building the model isn't enough--we need to fit it to the training data.  Run the cell below to fit the model.  Pay attention to the output--what does the `loss` value do over time? What does the `accuracy` value do over time?  We also pass it our testing data to do validation at the end of each epoch--is there a disparity between the accuracy and validation accuracy? What might this mean?"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "poor_model.fit(X_train, y_train, batch_size=64, epochs=10, verbose=1, validation_data=(X_test, y_test))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**_Fitting the Model: Vocabulary_**\n",
     "\n",
@@ -373,20 +372,20 @@
     "1. A Dense layer of 10 neurons--softmax activation (this is our output layer)\n",
     "\n",
     "Use the example above to help you figure out the necessary syntax for building this model.  Make sure to add the layers in the order that you want them--the order that you add them will be the order that they appear in the final model!"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "good_model = None"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<center><h2>Stretch Challenge: Tune Your Hyperparameters!</h2></center>\n",
     "\n",
@@ -400,7 +399,8 @@
     "1. Optimizer--try other [optimizers available in Keras](https://keras.io/optimizers/)--for instance, `\"adam\"` or `\"rmsprop\"`.\n",
     "\n",
     "Keep track of your results, and be scientific in your experimentation! Make small changes one at a time, and keep track of what happens each time.  If you make too many changes at once, you won't know how to **_assign blame!_** (See what I did there? Thats a backprop joke.  Admit it.  That was clever.)"
-   ]
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
