--- a/Notebooks/Keras_intro_iris/slide_keras_intro.ipynb
+++ b/Notebooks/Keras_intro_iris/slide_keras_intro.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Deep Learning Platforms in Python\n",
     "\n",
@@ -19,13 +18,13 @@
     "6- CNTK\n",
     "\n",
     "7- MXNET"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Why we use Keras in DS 2.2 ?\n",
+    "## Why we use Keras in ACS 3520?\n",
     "\n",
     "- A focus on user experience, easy to build and train a deep learning model\n",
     "\n",
@@ -38,11 +37,11 @@
     "- Easy productization of models\n",
     "\n",
     "<img src=\"why_keras.png\" width=\"300\" height=\"300\">"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Keras has two API Styles\n",
     "\n",
@@ -67,11 +66,11 @@
     "- Great if we want to have acess to hidden layers or if we want to do branching\n",
     "\n",
     "<img src=\"keras_functional_api_2.png\" width=\"500\" height=\"500\">"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Activity: Apply NN with Keras on iris data\n",
     "\n",
@@ -84,21 +83,12 @@
     "- Define two layers fully connected network with 16 neurons as hidden layer\n",
     "\n",
     "- Define `categorical_crossentropy` as the loss (cost) function"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy = 0.98\n"
-     ]
-    }
-   ],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers.core import Dense, Activation\n",
@@ -126,23 +116,58 @@
     "model.fit(X_train, y_train_one_hot, epochs=100, batch_size=1, verbose=0);\n",
     "loss, accuracy = model.evaluate(X_test, y_test_one_hot, verbose=0)\n",
     "print(\"Accuracy = {:.2f}\".format(accuracy))"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Accuracy = 0.98\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Acitivity: Remove the hidden layer and train the new model with iris data"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers.core import Dense, Activation\n",
+    "from keras.utils import np_utils\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn import datasets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "iris = datasets.load_iris()\n",
+    "X, y = iris.data, iris.target\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)\n",
+    "\n",
+    "y_train_one_hot = np_utils.to_categorical(y_train)\n",
+    "y_test_one_hot = np_utils.to_categorical(y_test)\n",
+    "\n",
+    "# print(y_one_hot)\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Dense(3, input_shape=(4,)))\n",
+    "model.add(Activation('softmax'))\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=[\"accuracy\"])\n",
+    "model.fit(X_train, y_train_one_hot, epochs=100, batch_size=1, verbose=1);\n",
+    "loss, accuracy = model.evaluate(X_test, y_test_one_hot, verbose=0)\n",
+    "print(\"Accuracy = {:.2f}\".format(accuracy))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Epoch 1/100\n",
       "105/105 [==============================] - 0s 2ms/step - loss: 1.6645 - acc: 0.3714\n",
@@ -348,53 +373,18 @@
      ]
     }
    ],
-   "source": [
-    "from keras.models import Sequential\n",
-    "from keras.layers.core import Dense, Activation\n",
-    "from keras.utils import np_utils\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn import datasets\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "iris = datasets.load_iris()\n",
-    "X, y = iris.data, iris.target\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)\n",
-    "\n",
-    "y_train_one_hot = np_utils.to_categorical(y_train)\n",
-    "y_test_one_hot = np_utils.to_categorical(y_test)\n",
-    "\n",
-    "# print(y_one_hot)\n",
-    "\n",
-    "model = Sequential()\n",
-    "model.add(Dense(3, input_shape=(4,)))\n",
-    "model.add(Activation('softmax'))\n",
-    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=[\"accuracy\"])\n",
-    "model.fit(X_train, y_train_one_hot, epochs=100, batch_size=1, verbose=1);\n",
-    "loss, accuracy = model.evaluate(X_test, y_test_one_hot, verbose=0)\n",
-    "print(\"Accuracy = {:.2f}\".format(accuracy))"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Activity: Apply NN with Keras on iris data with Functional API"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy = 0.98\n"
-     ]
-    }
-   ],
    "source": [
     "from keras.layers import Input, Dense\n",
     "from keras.models import Model\n",
@@ -421,11 +411,20 @@
     "model.fit(X_train, y_train_one_hot, epochs=100, batch_size=1, verbose=0);\n",
     "loss, accuracy = model.evaluate(X_test, y_test_one_hot, verbose=0)\n",
     "print(\"Accuracy = {:.2f}\".format(accuracy))"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Accuracy = 0.98\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Appropriate Loss Function\n",
     "\n",
@@ -447,14 +446,15 @@
     "    - The loss function should be `mse` or `mae`\n",
     "    - We need one output neuron\n",
     "    - The activation function of last layer would be `linear`"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
